--- a/Dec 31/firsrTry/polls/index.html
+++ b/Dec 31/firsrTry/polls/index.html
@@ -2,5 +2,23 @@
 <ul>
 {% for choice in question.choice_set.all %}
     <li>{{ choice.choice_text }}</li>
-{% endfor %}
+    <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+    {% endfor %}
 </ul>
+
+
+<form action="{%url 'polls:vote' question.id %}" method="post">
+{% csrf_toekn %}
+<fieldset>
+    <legend><h1>{{ question.question_text }}</h1></legend>
+    {%if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif
+%}
+    {% for choise in question.choise_set.all %}
+    <input type="radio" name="choise" id="choise{{ forloop.counter }}"
+value="{{choise.id}}"
+        <label for="choise {{forloop.counter }}">{{ choise.choise_text}}
+}}</label><br>
+    {% endfor %}
+</fieldset>
+<input type=""submit" value="vote">
+</form>
